--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,7 @@
 	font-family: 'Press Start 2P', cursive;
 }
 body{
+	
   	background: url('../images/space-pixel.png') repeat-x  0 100% fixed;
    	animation: moving 60s linear infinite;
     width: 100%;
@@ -29,11 +30,21 @@ a, A:active, A:visited, A:hover {
 	color: #feda4a;
 }
 
+.end-of-text{
+  position: absolute;
+  width: 80%;
+  left: 10%;
+  top: 140px;
+  height: 200px;
+  background-image: linear-gradient(to top, rgba(0,0,0, 0), rgba(0,0,0,1) 50%);
+  z-index: 10;
+}
+
 .star-wars {
   display: flex;
   justify-content: center;
   position: relative;
-  height: 1900px;
+  height: 1950px;
   color: #feda4a;
   font-size: 300%;
   font-weight: 600;
@@ -51,7 +62,7 @@ a, A:active, A:visited, A:hover {
   position: relative;
   top: 99999px;
   transform-origin: 50% 100%;
-  animation: crawl 120s linear;
+  animation: crawl 120s linear infinite;
   text-shadow: 6px 6px black;
 }
 
@@ -71,7 +82,7 @@ a, A:active, A:visited, A:hover {
     transform: rotateX(20deg)  translateZ(0);
   }
     100% { 
-    top: -6000px;
+    top: -7000px;
     transform: rotateX(25deg) translateZ(-2500px);
   }
 }
