--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,7 @@
 body{
 	
   	background: url('../images/space-pixel.png') repeat-x  0 100% fixed;
+    background-size: cover;
    	animation: moving 60s linear infinite;
     width: 100%;
   	height: 100%;
