--- a/styles/main-style.css
+++ b/styles/main-style.css
@@ -1,5 +1,5 @@
 body{
-	background: url(../images/horrorterror.jpg) repeat-x bottom center fixed, 
+	background: url(../images/horrorterror.jpg) no-repeat bottom center fixed, 
 	linear-gradient(to bottom, rgba(255,255,255, 0), rgba(42,38,63,1) 30%) fixed;
 	
 }
