--- a/styles/main-style.css
+++ b/styles/main-style.css
@@ -3,10 +3,11 @@ body{
 	linear-gradient(to bottom, rgba(255,255,255, 0), rgba(42,38,63,1) 30%) fixed;
 	
 }
+*{
+	font-family: 'Press Start 2P', cursive;
+}
 .menu{
-	background-color: black;
-	
-
+	background-color: #DEF7FE;
 }
 .list{
 	margin-top: 50px;
